Fixed movie download report. Refactored settings service / dto's Lots of other refactoring